# rddvb

./: .clang_complete  .project.el  Makefile.am  README  README.md  configure.ac  makefile  pushanddistribute.sh  rddvb-uninstalled.pc.in  rddvb.pc.in
attic/: eitdecode.cpp
debian/: changelog  control
include/: channellist.h  config.h  configlivevalues.def  dvbdatabase.h  dvblock.h  dvbmisc.h  dvbpatterns.h  dvbprog.h  dvbstreams.h  episodehandler.h  iconcache.h  proglist.h
include/rddvb/: channellist.h  config.h  dvbmisc.h  dvbpatterns.h  dvbprog.h  findcards.h  iconcache.h  proglist.h
scripts/: backup-dvb.sh  backup-dvb.sh.in  gendvbgraph.sh  getdvblistings.sh  getdvblistings.sh.in  getlistings.sh  updatedvbchannels.pl  updatedvbchannels.pl.in
share/: X.ini  channels.conf  cmdserver.conf  dvb.conf  dvbchannelreplacements.txt  xmltvchannelreplacements.txt
share/apache/: dvb.conf
share/apache/subsites/: dvb.conf.in
share/slave/: dvb.conf
share/stream/: hlsstream.html
share/web/: .htaccess  dvb.php  dvb.php.in  dvb.sh.in  index.html  main.css  main.js  video.php  video.php.in
src/: Makefile.am  channellist.cpp  channellist.h  comparechannels.cpp  config.cpp  config.h  dvb.cpp  dvbdatabase.cpp  dvbdecodeprog.cpp  dvbfemon.cpp  dvblock.cpp  dvblock.h  dvbmisc.cpp  dvbmisc.h  dvbpatterns.cpp  dvbpatterns.h  dvbprog.cpp  dvbprog.h  dvbstreams.cpp  dvbweb.cpp  dvbweb2.cpp  eitdecode.cpp  episodehandler.cpp  episodehandler.h  extractconfig.cpp  findaspect.cpp  findcards.cpp  findcards.h  iconcache.cpp  iconcache.h  mpgsplit.cpp  proglist.cpp  proglist.h  sdfetch.cpp  sigcmp.cpp  videosig.cpp
transmitters/: Pendle Forest channels.txt  Winter Hill channels.txt
